Add JVM options for hazelcast