@@ -164,6 +164,14 @@ public class AgentSocket implements Runnable {
 	    					wrapperConf = wrapperConf.replace("../lib/" + Agent.version + "/", "../lib/" + versionAtServer + "/");
 	    					wrapperConf = wrapperConf.replace("-XX:+IgnoreUnrecognizedVMOptions", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED");
 	    					
+	    					if (!wrapperConf.contains("java.base/jdk.internal.ref=ALL-UNNAMED")) {
+	    						wrapperConf += ""
+	    								+ "\r\nwrapperConfwrapper.java.additional.30=--add-modules=java.se" 
+	    								+ "\r\nwrapper.java.additional.31=--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED" 
+	    								+ "\r\nwrapper.java.additional.32=--add-opens=java.management/sun.management=ALL-UNNAMED"
+	    								+ "\r\nwrapper.java.additional.33=--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED";
+	    					}
+	    					
 	    					if (!wrapperConf.contains("wrapper.disable_console_input")) 
 	    						wrapperConf += "\r\nwrapper.disable_console_input=TRUE";
 	    					
